# misc

./: self_mod_code.cpp
bp_detection/: Makefile  main.c
brutforce/brute_force_xor/: brute_force_xor.c
brutforce/brute_force_xor_parallel/: brute_force_xor_parallel.c
brutforce/bruteforce_xor_cuda/: bruteforce_xor_cuda.cu
is_debugger_present/: build.txt  check_peb.asm  is_debugger_present.cpp
parallel_compute/: Makefile  barrier.h  main.c  queue.h  scheduler.h  semaphore.h  task.h
parallel_compute/parallel_compute_v1/: barrier.h  common.h  main.c  semaphore.h  spinlock.h
parallel_compute/parallel_compute_v2/: Makefile  common.h  main.c
parallel_compute_v2/: common.h  main.c  queue.h  semaphore.h  task.h  workers.h
parallel_compute_v3/: parallel_computer.cpp  parallel_computer.h
producer_consumer/: double_buffer.txt  producer_consumer.cpp
quantization/: fp_n.cpp  quantize_into_range.cpp
quary_cpu_features/: quary_cpu_features.c
query_cpu_features/: query_number_of_cores.cpp
self_decryption/: client.cpp  encrypt.py  info.txt  open_sync.py  self_decryption.cpp  server.cpp
self_mod_code/: self_mod_code.cpp
semaphore_lightweight/: semaphore_lightweight.h
strstr_u16/: strstr_u16.c
vec_mat_mul/: mat_mat_mul_6x6_transposed.cpp  vec_mat_mul.cpp  vec_mat_mul_mt_bench.cpp  vec_mat_mul_mt_test.cpp
vec_mat_mul/linux64/: Makefile  (+4 more)
vec_math/: vec_math_test.cpp
vec_powf4/: vpowf4_sse2.asm
xor_cypher_opengl/: CMakeLists.txt
xor_cypher_opengl/Shaders/: shader.comp
xor_cypher_opengl/include/: Shader.h
xor_cypher_opengl/src/: Shader.cpp  main.cpp
(+12 files in other folders)
